# aiopppp

./: .gitignore  README.md  binary_camera.py  little_stars_camera.py  pyproject.toml
aiopppp/: __init__.py  __main__.py  adpcm.py  const.py  device.py  discover.py  encrypt.py  http_server.py  packets.py  session.py  types.py
