[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopppp"
version = "0.1.0"
description = "An asynchronous Python library for connecting to PPPP-enabled cameras."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ivan Belokobylskiy", email = "belokobylskij@gmail.com"}
]
requires-python = ">=3.7"
keywords = ["pppp", "camera", "async", "video", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
]

[project.urls]
"Homepage" = "https://github.com/devbis/aiopppp"
"Bug Tracker" = "https://github.com/devbis/aiopppp/issues"
